Tests for EZTVEpisode.ParseEpisode

--- a/EZTV.Tests/EZTV.Tests.csproj
+++ b/EZTV.Tests/EZTV.Tests.csproj
@@ -50,6 +50,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="EpisodeParserTests.cs" />
+    <Compile Include="EZTVEpisodeTests.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
